--- a/docker-compose.override.dev.yml
+++ b/docker-compose.override.dev.yml
@@ -5,7 +5,7 @@ services:
   app:
     volumes:
       - ./db:/wd/db:rw
-    user: "1000"
+    user: 1000:1000
     ports:
       - "5000:5000"
     command:
