--- a/docker-compose.override.dev.yml
+++ b/docker-compose.override.dev.yml
@@ -3,10 +3,11 @@ version: '3.9'
 
 services:
   app:
+    user:
+      1000:1000
     volumes:
       - ./db:/wd/db:rw
     ports:
       - "5000:5000"
     command:
       - --host=0.0.0.0
-    user: "1000:1000"
