--- a/.gitignore
+++ b/.gitignore
@@ -128,6 +128,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+/venv2/
 
 # Spyder project settings
 .spyderproject
@@ -163,4 +164,4 @@ cython_debug/
 docker-compose.override.yml
 
 db/**
-/venv2/
+!scripts
